Update page - hotel-rooms-for-california-healthcare-workers.html a8677961d4eaf261e8f4bde9fdbae4ba29b7aede

--- a/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hotel rooms for California healthcare workers</h1>
           
-            <p class="small-text">Last updated&nbsp;March 25, 2021 at 3:11 PM</p>
+            <p class="small-text">Last updated&nbsp;April 2, 2021 at 3:45 PM</p>
           
         </div>
       </div>
@@ -169,15 +169,15 @@
 
 
 
-<h2 class="js-qa-exclude" id="program-eligibility">Program eligibility</h2>
+<h2 id="program-eligibility">Program eligibility</h2>
 
 
 
-<p class="js-qa-exclude">To be eligible for a paid room through this program, you must:</p>
+<p>To be eligible for a paid room through this program, you must:</p>
 
 
 
-<ul class="js-qa-exclude"><li>Work in a California healthcare facility as a healthcare worker, or work in conjunction with a California healthcare facility as one of the following:&nbsp;<ul><li>Medical transport provider</li><li>First responder (fire, police, correctional, EMT, or paramedic)</li><li>Non-medical staff in a healthcare facility</li><li>Correctional facility staff</li><li>Work in&nbsp;California’s Health Corps or CAL MAT, as designated by the State</li></ul></li><li>Have tested positive for COVID-19 as a result of exposure during your work at a facility (and do not need to be hospitalized), or be exposed to COVID-19 through close contact with clients, patients, residents, or coworkers that either have:<ul><li>Symptoms of COVID-19 (presumed exposure)</li><li>Tested positive for COVID-19 (confirmed exposure) and may or may not have symptoms</li></ul></li></ul>
+<ul><li>Work in a California healthcare facility as a healthcare worker, or work in conjunction with a California healthcare facility as one of the following:&nbsp;<ul><li>Medical transport provider</li><li>First responder (fire, police, correctional, EMT, or paramedic)</li><li>Non-medical staff in a healthcare facility</li><li>Correctional facility staff</li><li>Work in&nbsp;California’s Health Corps or CAL MAT, as designated by the State</li></ul></li><li>Have tested positive for COVID-19 as a result of exposure during your work at a facility (and do not need to be hospitalized), or be exposed to COVID-19 through close contact with clients, patients, residents, or coworkers that either have:<ul><li>Symptoms of COVID-19 (presumed exposure)</li><li>Tested positive for COVID-19 (confirmed exposure) and may or may not have symptoms</li></ul></li></ul>
 
 
 
@@ -213,7 +213,7 @@
 
 
 
-<h2 class="js-qa-exclude" id="reserve-room">Reserving a room</h2>
+<h2 id="reserve-room">Reserving a room</h2>
 
 
 
@@ -269,7 +269,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Can routine travel for healthcare staff be covered under the “Hotel rooms for healthcare workers” program?</h4>
+            <h3>Can routine travel for healthcare staff be covered under the “Hotel rooms for healthcare workers” program?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -297,7 +297,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>What if my facility’s Point of Contact rejects my reservation request?</h4>
+            <h3>What if my facility’s Point of Contact rejects my reservation request?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -320,7 +320,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>If I work for a staffing agency or registry, who will my Point of Contact be?</h4>
+            <h3>If I work for a staffing agency or registry, who will my Point of Contact be?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
