Update page - contracts.html 69f4f6115416a73110b70fdd0311ac472ece41a7

--- a/contracts/index.html
+++ b/contracts/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Released COVID-19 Response Contracts</h1>
           
-            <p class="small-text">Last updated&nbsp;April 1, 2021 at 11:31 AM</p>
+            <p class="small-text">Last updated&nbsp;April 2, 2021 at 3:56 PM</p>
           
         </div>
       </div>
@@ -173,7 +173,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <p>A-D:</p>
+            <h2>A-D:</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -366,7 +366,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <p>E-J:</p>
+            <h2>E-J:</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -494,7 +494,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <p>K-P:</p>
+            <h2>K-P:</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -672,7 +672,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <p>Q-Z:</p>
+            <h2>Q-Z:</h2>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
