--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 						<a href="/safer-economy/" class="featured-content-image">
 							<img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" alt="We are open sign in business window">
 						</a>
-						<p class="mt-2 mb-0"><a class="bold text-larger" href="#">See what&#8217;s open in your county</a></p>
+						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/">See what&#8217;s open in your county</a></p>
 					</article>
 					<article class="news-item">
 						<a href="/safer-economy/#county-status" class="featured-content-image">
