Update page - symptoms-and-risks.html 60c61c303724892694bbbd02fe35133d9fe81a2b

--- a/symptoms-and-risks/index.html
+++ b/symptoms-and-risks/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Symptoms and risks</h1>
           
-            <p class="small-text">Last updated&nbsp;April 1, 2021 at 3:19 PM</p>
+            <p class="small-text">Last updated&nbsp;April 2, 2021 at 7:55 PM</p>
           
         </div>
       </div>
@@ -555,7 +555,7 @@
 <ul><li>You were within 6 feet of someone who has COVID-19 for 15 minutes or more over a 24-hour period</li><li>You provided care at home to someone who is sick with COVID-19</li><li>You had direct physical contact with the person (like hugging or kissing them)</li><li>You shared eating or drinking utensils</li><li>They sneezed, coughed, or somehow got respiratory droplets on you</li></ul>
 <p>You do not have to quarantine, even after close contact, if:</p>
 <ul><li>You recovered from COVID-19 within the past 3 months and have no new symptoms.</li><li>You are <a href="https://covid19.ca.gov/vaccines/#Quarantine-if-you%E2%80%99re-vaccinated">fully vaccinated</a> against COVID-19 and show no symptoms.</li></ul>
-<p>You should avoid non-essential domestic and international travel, even if you are fully vaccinated. See the <a href="https://covid19.ca.gov/travel/">Travel page</a> for travel related quarantine requirements.</p>
+<p>See the <a href="https://covid19.ca.gov/travel/">Travel page</a> for travel related quarantine requirements.</p>
 
                   </div>
                 </div>
