--- a/pages/wordpress-posts/state-dashboard.html
+++ b/pages/wordpress-posts/state-dashboard.html
@@ -244,56 +244,54 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 
 
-<div class="row d-flex justify-content-md-center">
-  <form class="form-inline" id="county-form">
-    <div class="form-group mx-sm-3 mb-2 pos-rel autocomplete-inline">
-      <label for="county" class="sr-only">County</label>
-      <div class="awesomplete">
-        <input aria-expanded="false" aria-owns="awesomplete_list_1" autocomplete="off" class="form-control form-control-lg" data-list="" data-multiple="" id="location-query" role="combobox" type="text" placeholder="Enter a county">
-        <button class="clear d-none" id="clearCounty"><span class="ca-gov-icon-close-line" aria-hidden="true"></span>
-          <span class="underline">Clear</span></button>
-      </div>
-    </div>
-    <button type="submit" class="btn btn-lightbg btn-bigger mb-2">Get county data</button>
-  </form>
-</div>
-<div class="row d-flex justify-content-md-center">
-  <span id="county-query-error" class="error-text d-none">County not found</span>
-</div>
-
-<script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
-
-
+<cagov-county-search></cagov-county-search>
 
 <h3 class="text-center mt-4 mb-0">Daily cases and deaths</h3>
 
-
-
-<div class="d-flex flex-column flex-md-row justify-content-center my-3">
-  <div class="js-toggle-county-container d-none">
-    <div class="large-tabs">
-      <button class="large-tab js-toggle-county county d-none">Alameda</button>
-      <button class="large-tab toggle-active js-toggle-county statewide">Statewide</button>
-    </div>
-  </div>
-</div>
-
-
+<cagov-county-toggle-buttons></cagov-county-toggle-buttons>
 
 <p>California has {{_varStatTotalCases_}} confirmed cases of COVID-19, resulting in {{_varStatTotalDeaths_}} deaths.</p>
 
 
 
-<div class="row d-flex justify-content-md-center">
-  <div class="toggle-group-container cases-group">
-    <div id="cases-county-graph" class="toggle-group-element">
-      <div class="tableauPlaceholder" id="casesChartCounty"></div>
+  <!-- TOP CHARTS --> 
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <cagov-chart-dashboard-confirmed-cases-episode-date class="chart">
+        <ul class="d-none">
+          <li data-label="chartTitle">Confirmed cases in {regionName}</li>
+          <li data-label="chartLegend1"><span class="big-num">{total_confirmed_cases}</span> total confirmed cases</li>
+          <li data-label="chartLegend2Increase"><span class="med-num">{new_cases}</span> new cases ({new_cases_delta_1_day} increase)</li>
+          <li data-label="chartLegend2Decrease"><span class="med-num">{new_cases}</span> new cases ({new_cases_delta_1_day} decrease)</li>
+          <li data-label="chartLegend3"><span class="med-num">{cases_per_100k_7_days}</span> cases per 100K (7-day average)</li>
+          <li data-label="tooltipContent">
+                  Episode Date: <b>{DATE}</b><br>
+                  7-day average case rate per 100K: <b>{7DAY_AVERAGE}</b><br>
+                  Cases: <b>{CASES}</b>
+          </li>
+          <li data-label="tooltipLegend2">Total hospitalized COVID-19 patients:</li>
+          <li data-label="tooltipLegend3">14-day average of hospitalized patients:</li>
+        </ul>
+      </cagov-chart-dashboard-confirmed-cases-episode-date>                
     </div>
-    <div id="cases-state-graph" class="toggle-group-element">
-      <div class="tableauPlaceholder" id="casesChartState"></div>
-    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <cagov-chart-dashboard-confirmed-deaths-death-date class="chart">
+        <ul class="d-none">
+          <li data-label="chartTitle">Confirmed deaths in California</li>
+          <li data-label="chartLegend1"><span class="big-num">{total_confirmed_deaths}</span> total confirmed deaths</li>
+          <li data-label="chartLegend2Increase"><span class="med-num">{new_deaths}</span> new deaths ({new_deaths_delta_1_day} increase)</li>
+          <li data-label="chartLegend2Decrease"><span class="med-num">{new_deaths}</span> new deaths ({new_deaths_delta_1_day} decrease)</li>
+          <li data-label="chartLegend3"><span class="med-num">{deaths_per_100k_7_days}</span> deaths per 100K (7-day average)</li>
+          <li data-label="tooltipContent">
+            Death Date: <b>{DATE}</b><br>
+            7-day average death rate per 100K: <b>{7DAY_AVERAGE}</b><br>
+            Deaths: <b>{DEATHS}</b>
+          </li>
+        </ul>
+      </cagov-chart-dashboard-confirmed-deaths-death-date>               
+    </div> 
   </div>
-</div>
+
 
 
 
@@ -307,14 +305,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 
 
-<div class="d-flex flex-column flex-md-row justify-content-center my-3">
-  <div class="js-toggle-county-container d-none">
-    <div class="large-tabs">
-      <button class="large-tab js-toggle-county county d-none">Alameda</button>
-      <button class="large-tab toggle-active js-toggle-county statewide">Statewide</button>
-    </div>
-  </div>
-</div>
+<cagov-county-toggle-buttons></cagov-county-toggle-buttons>
 
 
 
@@ -322,16 +313,40 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 
 
-<div class="row d-flex justify-content-md-center">
-  <div class="toggle-group-container cases-group">
-    <div id="testing-county-graph" class="toggle-group-element">
-      <div class="tableauPlaceholder" id="testingChartCounty"></div>
+  <!-- MIDDLE CHARTS -->
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <cagov-chart-dashboard-total-tests-testing-date class="chart">
+        <ul class="d-none">
+          <li data-label="chartTitle">Total tests in California</li>
+            
+          <li data-label="chartLegend1"><span class="big-num">{total_tests_performed}</span> total tests performed</li>
+          <li data-label="chartLegend2Increase"><span class="med-num">{new_tests_reported}</span> new tests reported ({new_tests_reported_delta_1_day} increase)</li>
+          <li data-label="chartLegend2Decrease"><span class="med-num">{new_tests_reported}</span> new tests reported ({new_tests_reported_delta_1_day} decrease)</li>
+          <li data-label="tooltipContent">
+            Testing Date: <b>{DATE} </b><br>
+            7-day average test rate per 100K: <b>{7DAY_AVERAGE} </b><br>
+            Total Tests: <b>{TOTAL_TESTS} </b>
+          </li>
+        </ul>
+      </cagov-chart-dashboard-total-tests-testing-date>                
     </div>
-    <div id="testing-state-graph" class="toggle-group-element">
-      <div class="tableauPlaceholder" id="testingChartState"></div>
-    </div>
-  </div>
-</div>
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <cagov-chart-dashboard-positivity-rate class="chart">
+        <ul class="d-none">
+          <li data-label="chartTitle">Positivity rate in California</li>
+          <li data-label="chartLegend1"><span class="big-num">{test_positivity_7_days}</span> test positivity (7-day rate)</li>
+          <li data-label="chartLegend2Increase"><span class="med-num">{test_positivity_7_days_delta_7_days}</span> increase from 7-days prior</li>
+          <li data-label="chartLegend2Decrease"><span class="med-num">{test_positivity_7_days_delta_7_days}</span> decrease from 7-days prior</li>
+          <li data-label="tooltipContent">
+            Testing Date: <b>{DATE} </b><br>
+            7-day positivity rate: <b>{7DAY_POSRATE} </b><br>
+            Total Tests: <b>{TOTAL_TESTS} </b>
+          </li>
+        </ul>
+      </cagov-chart-dashboard-positivity-rate>               
+    </div> 
+  </div> 
 
 
 
@@ -345,33 +360,42 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 
 
-<div class="d-flex flex-column flex-md-row justify-content-center my-3">
-  <div class="js-toggle-county-container d-none">
-    <div class="large-tabs">
-      <button class="large-tab js-toggle-county county d-none">Alameda</button>
-      <button class="large-tab toggle-active js-toggle-county statewide">Statewide</button>
-    </div>
-  </div>
-</div>
-
+<cagov-county-toggle-buttons></cagov-county-toggle-buttons>
 
 
 <p>The number of hospitalizations due to confirmed and suspected COVID-19 cases in California reached a total of {{_varStatHospitalTotal_}}, {{_varStatHospitalChangeText_}} {{_varStatHospitalChange_ | abs}} from the prior day total. The number of ICU patients due to confirmed and suspected COVID-19 cases in California reached a total of {{_varStatIcuTotal_}}, {{_varStatIcuChangeText_}} {{_varStatIcuChange_ | abs}} from the prior day total.</p>
 
 
 
-<div class="row d-flex justify-content-md-center">
-  <div class="toggle-group-container hospitals-group">
-    <div id="hospital-county-graph" class="toggle-group-element">
-      <div class="tableauPlaceholder" id="hospitalChartCounty"></div>
+  <!-- bottom HOSPITAL charts -->
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <cagov-chart-dashboard-hospitalized-patients class="chart">
+        <ul class="d-none">
+          <li data-label="chartTitle">COVID-19 hospitalized patients in California</li>
+          <li data-label="chartLegend1"><span class="big-num">{TOTAL}</span> COVID-19 hospitalized patients</li>
+          <li data-label="chartLegend2Increase"><span class="med-num">{CHANGE}</span> more patients from prior day total ({CHANGE_FACTOR} increase)</li>
+          <li data-label="chartLegend2Decrease"><span class="med-num">{CHANGE}</span> fewer patients from prior day total ({CHANGE_FACTOR} decrease)</li>
+          <li data-label="tooltipContent">
+            Reported Date: <b>{DATE} </b><br>
+            Total hospitalized patients: <b>{TOTAL_HOSPITALIZED} </b><br>
+            14-day average of hospitalized patients: <b>{14DAY_AVERAGE} </b>
+          </li>
+        </ul>
+      </cagov-chart-dashboard-hospitalized-patients>                
     </div>
-    <div id="hospital-state-graph" class="toggle-group-element">
-      <div class="tableauPlaceholder" id="hospitalChartState"></div>
-    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <cagov-chart-dashboard-icu-beds class="chart">
+        <ul class="d-none">
+          <li data-label="chartTitle">ICU beds in California</li>
+          <li data-label="chartLegend1"><span class="big-num">{TOTAL}</span> ICU beds available</li>
+          <li data-label="chartLegend2Increase"><span class="med-num">{CHANGE}</span> more ICU beds from prior day total ({CHANGE_FACTOR} increase)</li>
+          <li data-label="chartLegend2Decrease"><span class="med-num">{CHANGE}</span> fewer ICU beds from prior day total ({CHANGE_FACTOR} decrease)</li>
+          <li data-label="tooltipContent">On <b>{DATE}</b> there was a total of <b>{VALUE}</b> available ICU beds.</li>
+        </ul>
+      </cagov-chart-dashboard-icu-beds>               
+    </div> 
   </div>
-
-</div>
-
 
 
 <div class="bg-darkblue py-5 full-bleed mb-5">
