ADD pages/guidancefeed/cdph/0fb084a4b49271b601aa65d4c93c5ecc.html d29b316500bf26228e2d2f45483f3e476ac34abd

--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">最近更新&nbsp;April 3, 2021 at 9:40 AM</p>
+            <p class="small-text">最近更新&nbsp;April 3, 2021 at 12:32 PM</p>
           
         </div>
       </div>
@@ -157,6 +157,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-111.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#371)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--0fb084a4b49271b601aa65d4c93c5ecc -->April 2, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19 and updates on the state's pandemic response.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-110.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#370)</a>
