--- a/pages/wordpress-posts/state-dashboard.html
+++ b/pages/wordpress-posts/state-dashboard.html
@@ -259,7 +259,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
     <div class="col-lg-6 col-md-6 col-sm-12">
       <cagov-chart-dashboard-confirmed-cases-episode-date class="chart">
         <ul class="d-none">
-          <li data-label="chartTitle">Confirmed cases in {regionName}</li>
+          <li data-label="chartTitle">Confirmed cases in</li>
           <li data-label="chartLegend1"><span class="big-num">{total_confirmed_cases}</span> total confirmed cases</li>
           <li data-label="chartLegend2Increase"><span class="med-num">{new_cases}</span> new cases ({new_cases_delta_1_day} increase)</li>
           <li data-label="chartLegend2Decrease"><span class="med-num">{new_cases}</span> new cases ({new_cases_delta_1_day} decrease)</li>
@@ -277,7 +277,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
     <div class="col-lg-6 col-md-6 col-sm-12">
       <cagov-chart-dashboard-confirmed-deaths-death-date class="chart">
         <ul class="d-none">
-          <li data-label="chartTitle">Confirmed deaths in California</li>
+          <li data-label="chartTitle">Confirmed deaths in</li>
           <li data-label="chartLegend1"><span class="big-num">{total_confirmed_deaths}</span> total confirmed deaths</li>
           <li data-label="chartLegend2Increase"><span class="med-num">{new_deaths}</span> new deaths ({new_deaths_delta_1_day} increase)</li>
           <li data-label="chartLegend2Decrease"><span class="med-num">{new_deaths}</span> new deaths ({new_deaths_delta_1_day} decrease)</li>
@@ -318,7 +318,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
     <div class="col-lg-6 col-md-6 col-sm-12">
       <cagov-chart-dashboard-total-tests-testing-date class="chart">
         <ul class="d-none">
-          <li data-label="chartTitle">Total tests in California</li>
+          <li data-label="chartTitle">Total tests in</li>
             
           <li data-label="chartLegend1"><span class="big-num">{total_tests_performed}</span> total tests performed</li>
           <li data-label="chartLegend2Increase"><span class="med-num">{new_tests_reported}</span> new tests reported ({new_tests_reported_delta_1_day} increase)</li>
@@ -334,7 +334,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
     <div class="col-lg-6 col-md-6 col-sm-12">
       <cagov-chart-dashboard-positivity-rate class="chart">
         <ul class="d-none">
-          <li data-label="chartTitle">Positivity rate in California</li>
+          <li data-label="chartTitle">Positivity rate in</li>
           <li data-label="chartLegend1"><span class="big-num">{test_positivity_7_days}</span> test positivity (7-day rate)</li>
           <li data-label="chartLegend2Increase"><span class="med-num">{test_positivity_7_days_delta_7_days}</span> increase from 7-days prior</li>
           <li data-label="chartLegend2Decrease"><span class="med-num">{test_positivity_7_days_delta_7_days}</span> decrease from 7-days prior</li>
@@ -372,7 +372,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
     <div class="col-lg-6 col-md-6 col-sm-12">
       <cagov-chart-dashboard-hospitalized-patients class="chart">
         <ul class="d-none">
-          <li data-label="chartTitle">COVID-19 hospitalized patients in California</li>
+          <li data-label="chartTitle">COVID-19 hospitalized patients in</li>
           <li data-label="chartLegend1"><span class="big-num">{TOTAL}</span> COVID-19 hospitalized patients</li>
           <li data-label="chartLegend2Increase"><span class="med-num">{CHANGE}</span> more patients from prior day total ({CHANGE_FACTOR} increase)</li>
           <li data-label="chartLegend2Decrease"><span class="med-num">{CHANGE}</span> fewer patients from prior day total ({CHANGE_FACTOR} decrease)</li>
@@ -387,7 +387,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
     <div class="col-lg-6 col-md-6 col-sm-12">
       <cagov-chart-dashboard-icu-beds class="chart">
         <ul class="d-none">
-          <li data-label="chartTitle">ICU beds in California</li>
+          <li data-label="chartTitle">ICU beds in</li>
           <li data-label="chartLegend1"><span class="big-num">{TOTAL}</span> ICU beds available</li>
           <li data-label="chartLegend2Increase"><span class="med-num">{CHANGE}</span> more ICU beds from prior day total ({CHANGE_FACTOR} increase)</li>
           <li data-label="chartLegend2Decrease"><span class="med-num">{CHANGE}</span> fewer ICU beds from prior day total ({CHANGE_FACTOR} decrease)</li>
