--- a/pages/wordpress-posts/state-dashboard.html
+++ b/pages/wordpress-posts/state-dashboard.html
@@ -257,7 +257,13 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
   <!-- TOP CHARTS --> 
   <div class="row">
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-dashboard-confirmed-cases-episode-date class="chart">
+      <cagov-chart-filter-buttons class="js-re-smalls js-filter-cases">
+        <div class="d-flex justify-content-center">
+          <button class="small-tab active" data-key="episode">Episode date</button>
+          <button class="small-tab" data-key="reported">Reported data</button>
+        </div>
+      </cagov-chart-filter-buttons>
+      <cagov-chart-dashboard-confirmed-cases-episode-date class="chart" data-chart-config-filter="episode" data-chart-config-key="cases">
         <ul class="d-none">
           <li data-label="chartTitle">Confirmed cases in</li>
           <li data-label="chartLegend1"><span class="big-num">{total_confirmed_cases}</span> total confirmed cases</li>
