--- a/pages/wordpress-posts/state-dashboard.html
+++ b/pages/wordpress-posts/state-dashboard.html
@@ -277,6 +277,11 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
           </li>
           <li data-label="tooltipLegend2">Total hospitalized COVID-19 patients:</li>
           <li data-label="tooltipLegend3">14-day average of hospitalized patients:</li>
+          <li data-label="dayAverage">7-day average</li>
+          <li data-label="cases_leftYAxisLegend">Cases per 100K</li>
+          <li data-label="cases_rightYAxisLegend">Cases</li>
+          <li data-label="cases_episode_xAxisLegend">Episode date</li>
+          <li data-label="cases_reported_xAxisLegend">Reported date</li>
         </ul>
       </cagov-chart-dashboard-confirmed-cases-episode-date>                
     </div>
