--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:32 م الساعة 3 أبريل 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:17 ص الساعة 4 أبريل 2021</p>
           
         </div>
       </div>
