--- a/ko/latest-news/index.html
+++ b/ko/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19에 대한 최신 뉴스</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 4월 3일 오후 12:32</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 4월 4일 오전 9:17</p>
           
         </div>
       </div>
