--- a/pages/wordpress-posts/state-dashboard.html
+++ b/pages/wordpress-posts/state-dashboard.html
@@ -275,13 +275,12 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                   7-day average case rate per 100K: <b>{7DAY_AVERAGE}</b><br>
                   Cases: <b>{CASES}</b>
           </li>
-          <li data-label="tooltipLegend2">Total hospitalized COVID-19 patients:</li>
-          <li data-label="tooltipLegend3">14-day average of hospitalized patients:</li>
           <li data-label="dayAverage">7-day average</li>
           <li data-label="cases_leftYAxisLegend">Cases per 100K</li>
           <li data-label="cases_rightYAxisLegend">Cases</li>
           <li data-label="cases_episode_xAxisLegend">Episode date</li>
           <li data-label="cases_reported_xAxisLegend">Reported date</li>
+          <li data-label="pending">Pending</li>
         </ul>
       </cagov-chart-dashboard-confirmed-cases-episode-date>                
     </div>
@@ -298,6 +297,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
             7-day average death rate per 100K: <b>{7DAY_AVERAGE}</b><br>
             Deaths: <b>{DEATHS}</b>
           </li>
+          <li data-label="pending">Pending</li>
         </ul>
       </cagov-chart-dashboard-confirmed-deaths-death-date>               
     </div> 
@@ -339,6 +339,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
             7-day average test rate per 100K: <b>{7DAY_AVERAGE} </b><br>
             Total Tests: <b>{TOTAL_TESTS} </b>
           </li>
+          <li data-label="pending">Pending</li>
         </ul>
       </cagov-chart-dashboard-total-tests-testing-date>                
     </div>
@@ -354,6 +355,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
             7-day positivity rate: <b>{7DAY_POSRATE} </b><br>
             Total Tests: <b>{TOTAL_TESTS} </b>
           </li>
+          <li data-label="pending">Pending</li>
         </ul>
       </cagov-chart-dashboard-positivity-rate>               
     </div> 
