--- a/pages/wordpress-posts/state-dashboard.html
+++ b/pages/wordpress-posts/state-dashboard.html
@@ -285,7 +285,13 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
       </cagov-chart-dashboard-confirmed-cases-episode-date>                
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-dashboard-confirmed-deaths-death-date class="chart">
+      <cagov-chart-filter-buttons class="js-re-smalls js-filter-deaths">
+        <div class="d-flex justify-content-center">
+          <button class="small-tab active" data-key="death">Death date</button>
+          <button class="small-tab" data-key="reported">Reported data</button>
+        </div>
+      </cagov-chart-filter-buttons>
+      <cagov-chart-dashboard-confirmed-deaths-death-date class="chart" data-chart-config-filter="death" data-chart-config-key="deaths">
         <ul class="d-none">
           <li data-label="chartTitle">Confirmed deaths in</li>
           <li data-label="chartLegend1"><span class="big-num">{total_confirmed_deaths}</span> total confirmed deaths</li>
@@ -297,6 +303,11 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
             7-day average death rate per 100K: <b>{7DAY_AVERAGE}</b><br>
             Deaths: <b>{DEATHS}</b>
           </li>
+          <li data-label="dayAverage">7-day average</li>
+          <li data-label="deaths_leftYAxisLegend">Deaths per 100K</li>
+          <li data-label="deaths_rightYAxisLegend">Deaths</li>
+          <li data-label="deaths_death_xAxisLegend">Death date</li>
+          <li data-label="deaths_reported_xAxisLegend">Reported date</li>
           <li data-label="pending">Pending</li>
         </ul>
       </cagov-chart-dashboard-confirmed-deaths-death-date>               
