--- a/pages/wordpress-posts/state-dashboard.html
+++ b/pages/wordpress-posts/state-dashboard.html
@@ -338,10 +338,15 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
   <!-- MIDDLE CHARTS -->
   <div class="row">
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <cagov-chart-dashboard-total-tests-testing-date class="chart">
+      <cagov-chart-filter-buttons class="js-re-smalls js-filter-tests">
+        <div class="d-flex justify-content-center">
+          <button class="small-tab active" data-key="testing">Testing date</button>
+          <button class="small-tab" data-key="reported">Reported data</button>
+        </div>
+      </cagov-chart-filter-buttons>
+      <cagov-chart-dashboard-total-tests-testing-date class="chart"  data-chart-config-filter="testing" data-chart-config-key="tests">
         <ul class="d-none">
           <li data-label="chartTitle">Total tests in</li>
-            
           <li data-label="chartLegend1"><span class="big-num">{total_tests_performed}</span> total tests performed</li>
           <li data-label="chartLegend2Increase"><span class="med-num">{new_tests_reported}</span> new tests reported ({new_tests_reported_delta_1_day} increase)</li>
           <li data-label="chartLegend2Decrease"><span class="med-num">{new_tests_reported}</span> new tests reported ({new_tests_reported_delta_1_day} decrease)</li>
@@ -350,6 +355,11 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
             7-day average test rate per 100K: <b>{7DAY_AVERAGE} </b><br>
             Total Tests: <b>{TOTAL_TESTS} </b>
           </li>
+          <li data-label="dayAverage">7-day average</li>
+          <li data-label="tests_leftYAxisLegend">Tests per 100K</li>
+          <li data-label="tests_rightYAxisLegend">Tests</li>
+          <li data-label="tests_testing_xAxisLegend">Testing date</li>
+          <li data-label="tests_reported_xAxisLegend">Reported date</li>
           <li data-label="pending">Pending</li>
         </ul>
       </cagov-chart-dashboard-total-tests-testing-date>                
