--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>News from the Governor&rsquo;s Office</h1>
           
-            <p class="small-text">Last updated&nbsp;April 4, 2021 at 2:17 PM</p>
+            <p class="small-text">Last updated&nbsp;April 5, 2021 at 5:06 AM</p>
           
         </div>
       </div>
