--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年4月5日, 上午10:01</p>
+            <p class="small-text">最近更新&nbsp;2021年4月5日, 下午1:02</p>
           
         </div>
       </div>
