Update page - charts-sandbox.html

--- a/pages/wordpress-posts/charts-sandbox.html
+++ b/pages/wordpress-posts/charts-sandbox.html
@@ -35,9 +35,9 @@ addtositemap: false
     <!-- TOP CHARTS --> 
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <cagov-chart-dashboard-confirmed-cases-episode-date class="chart" data-chart-config-filter="episode" data-chart-config-key="cases">
+        <cagov-chart-dashboard-confirmed-cases-episode-date class="chart">
           <ul class="d-none">
-            <li data-label="chartTitle">Confirmed cases in</li>
+            <li data-label="chartTitle">Confirmed cases in California</li>
             <li data-label="chartLegend1"><span class="big-num">{total_confirmed_cases}</span> total confirmed cases</li>
             <li data-label="chartLegend2Increase"><span class="med-num">{new_cases}</span> new cases ({new_cases_delta_1_day} increase)</li>
             <li data-label="chartLegend2Decrease"><span class="med-num">{new_cases}</span> new cases ({new_cases_delta_1_day} decrease)</li>
@@ -47,19 +47,15 @@ addtositemap: false
                     7-day average case rate per 100K: <b>{7DAY_AVERAGE}</b><br>
                     Cases: <b>{CASES}</b>
             </li>
-            <li data-label="dayAverage">7-day average</li>
-            <li data-label="cases_leftYAxisLegend">Cases per 100K</li>
-            <li data-label="cases_rightYAxisLegend">Cases</li>
-            <li data-label="cases_episode_xAxisLegend">Episode date</li>
-            <li data-label="cases_reported_xAxisLegend">Reported date</li>
-            <li data-label="pending">Pending</li>
+            <li data-label="tooltipLegend2">Total hospitalized COVID-19 patients:</li>
+            <li data-label="tooltipLegend3">14-day average of hospitalized patients:</li>
           </ul>
         </cagov-chart-dashboard-confirmed-cases-episode-date>                
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
         <cagov-chart-dashboard-confirmed-deaths-death-date class="chart">
           <ul class="d-none">
-            <li data-label="chartTitle">Confirmed deaths in</li>
+            <li data-label="chartTitle">Confirmed deaths in California</li>
             <li data-label="chartLegend1"><span class="big-num">{total_confirmed_deaths}</span> total confirmed deaths</li>
             <li data-label="chartLegend2Increase"><span class="med-num">{new_deaths}</span> new deaths ({new_deaths_delta_1_day} increase)</li>
             <li data-label="chartLegend2Decrease"><span class="med-num">{new_deaths}</span> new deaths ({new_deaths_delta_1_day} decrease)</li>
@@ -68,14 +64,9 @@ addtositemap: false
               Death Date: <b>{DATE}</b><br>
               7-day average death rate per 100K: <b>{7DAY_AVERAGE}</b><br>
               Deaths: <b>{DEATHS}</b>
-            <li data-label="deaths_leftYAxisLegend">Deaths per 100K</li>
-            <li data-label="deaths_rightYAxisLegend">Deaths</li>
-            <li data-label="deaths_episode_xAxisLegend">Episode date</li>
-            <li data-label="deaths_reported_xAxisLegend">Reported date</li>
-            <li data-label="pending">Pending</li>
             </li>
           </ul>
-        </cagov-chart-dashboard-confirmed-deaths-death-date>              
+        </cagov-chart-dashboard-confirmed-deaths-death-date>               
       </div> 
       <!-- TAB CHARTS (top) -->
       <div class="col-lg-6 col-md-6 col-sm-12">
@@ -91,6 +82,8 @@ addtositemap: false
                     7-day average case rate per 100K: <b>{7DAY_AVERAGE}</b><br>
                     Cases: <b>{CASES}</b>
             </li>
+            <li data-label="tooltipLegend2">Total hospitalized COVID-19 patients:</li>
+            <li data-label="tooltipLegend3">14-day average of hospitalized patients:</li>
           </ul>
         </cagov-chart-dashboard-confirmed-cases-reported-date>                
       </div>
@@ -127,7 +120,6 @@ addtositemap: false
               7-day average test rate per 100K: <b>{7DAY_AVERAGE} </b><br>
               Total Tests: <b>{TOTAL_TESTS} </b>
             </li>
-            <li data-label="pending">Pending</li>
           </ul>
         </cagov-chart-dashboard-total-tests-testing-date>                
       </div>
@@ -143,7 +135,6 @@ addtositemap: false
               7-day positivity rate: <b>{7DAY_POSRATE} </b><br>
               Total Tests: <b>{TOTAL_TESTS} </b>
             </li>
-            <li data-label="pending">Pending</li>
           </ul>
         </cagov-chart-dashboard-positivity-rate>               
       </div> 
